--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="heading">About Me</h2>
+                <h2 class="heading">Contact Me</h2>
                 <hr>
             </div>
             <div class="col-12">
