--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,35 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="heading">Portfolio</h2>
+                    <h2 class="heading">Portfolio</h2>
                 <hr>
             </div>
-            <div class="col-12">
-                
+            <div class="col-3">
+                    <div class="image-container">
+                        <h4 class="label">Picure 1</h4>
+                    </div>
+            </div>
+            <div class="col-3">
+                    <div class="image-container">
+                        <h4 class="label">Picure 1</h4>
+                    </div>
+            </div>
+            <div class=col-6></div>
+            <div class="col-3">
+                    <div class="image-container">
+                        <h4 class="label">Picure 1</h4>
+                    </div>
+            </div>
+            <div class="col-3">
+                    <div class="image-container">
+                        <h4 class="label">Picure 1</h4>
+                    </div>
+            </div>
+            <div class=col-6></div>
+            <div class="col-3">
+                    <div class="image-container">
+                        <h4 class="label">Picure 1</h4>
+                    </div>
             </div>
         </div>
     </div>
