--- a/index.html
+++ b/index.html
@@ -15,15 +15,6 @@
         
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto navbar-padding">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                </li>
             </ul>
         </div>
     </nav>
@@ -49,6 +40,44 @@
                     </p>
             </div>
         </div>
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <hr>
+                <h2>Portfolio</h2>
+            </div>
+            <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="./images/Trivia-Night.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Trivia Game</h5>
+                        <p class="card-text">A simple, timed trivia game that tests your JS knowledge. Built with Bootstrap, Javascript & jQuery. Firebase integration coming soon.</p>
+                        <a href="https://ansarkhan.github.io/TriviaGame" class="btn btn-primary">View Project</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="./images/train.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Trivia Game</h5>
+                        <p class="card-text">A train scheduler built using Bootstrap, Javascript, jQuery and Firebase. Utilizes Moment.js library to keep track of time. Version 2.0 coming out soon.</p>
+                        <a href="https://ansarkhan.github.io/train-schedule/" class="btn btn-primary">View Project</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="./images/rave-on.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Rave On</h5>
+                        <p class="card-text">An event finder that utilizes three APIs - Google Places, Ticketmaster and Spotify. Does not work fully due to limitations in GitHub hosting.</p>
+                        <a href="https://enfenry.github.io/Project_1_Repo/" class="btn btn-primary">View Project</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
 
@@ -63,7 +92,6 @@
     </footer>
               
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 </body>
