--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto navbar-padding">
+                <li class="nav-item">
+                   <a href="https://github.com/ansarkhan"> <img class="nav-link" src="./images/github.png"></a>
+                </li>
+                <li class="nav-item">
+                   <a href="https://www.linkedin.com/in/ansar-khan-33799849/"><img class="nav-link" src="./images/linkedin.png"></a> 
+                </li>
             </ul>
         </div>
     </nav>
@@ -26,24 +32,26 @@
                 <hr>
             </div>
         </div>
-        <div class="row">
+        <div class="row main-container">
             <div class="col-12">
                     <img class="img-fluid rounded img-thumbnail float-left profile-pic" src="images/profile-pic.png" alt="profile picture">
                     <p class="pull-left">
-                            Hi, I'm Ansar! Here's a little history about Lorem Ipsum...Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. 
+                            Hi, I'm Ansar. I am currently enrolled in the Geroge Washington Full Stack Developer Bootcamp. It's a part time course that teaches all the technologies needed to become a competitive full stack developer.
                     </p>
                     <p class="pull-left">
-                            Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+                        About a third of the way through the bootcamp, we have learned the fundamentals of HTML, CSS, Javascript. We have also worked with Bootstrap, jQuery, Firebase and a few other Javascript libraries. We have practiced our skills by completing weekly homeworks and a more involved project over two weeks.
                     </p>
                     <p class="pull-left">
-                            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+                        For the remainder of the course, we will be focusing on learning Node.js and Java as our backend languages and working with SQL and No-SQL databases. A list of my pr
                     </p>
             </div>
         </div>
-        <div class="row justify-content-center">
+
+        <div class="row justify-content-center main-container">
             <div class="col-12">
-                <hr>
+
                 <h2>Portfolio</h2>
+                <hr>
             </div>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
@@ -52,6 +60,7 @@
                         <h5 class="card-title">Trivia Game</h5>
                         <p class="card-text">A simple, timed trivia game that tests your JS knowledge. Built with Bootstrap, Javascript & jQuery. Firebase integration coming soon.</p>
                         <a href="https://ansarkhan.github.io/TriviaGame" class="btn btn-primary">View Project</a>
+                        <a href="https://github.com/ansarkhan/TriviaGame" class="btn btn-success">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -60,9 +69,10 @@
                 <div class="card" style="width: 18rem;">
                     <img src="./images/train.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Trivia Game</h5>
+                        <h5 class="card-title">Train Scheduler</h5>
                         <p class="card-text">A train scheduler built using Bootstrap, Javascript, jQuery and Firebase. Utilizes Moment.js library to keep track of time. Version 2.0 coming out soon.</p>
                         <a href="https://ansarkhan.github.io/train-schedule/" class="btn btn-primary">View Project</a>
+                        <a href="https://github.com/ansarkhan/train-schedule" class="btn btn-success">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -74,10 +84,12 @@
                         <h5 class="card-title">Rave On</h5>
                         <p class="card-text">An event finder that utilizes three APIs - Google Places, Ticketmaster and Spotify. Does not work fully due to limitations in GitHub hosting.</p>
                         <a href="https://enfenry.github.io/Project_1_Repo/" class="btn btn-primary">View Project</a>
+                        <a href="https://github.com/enfenry/Project_1_Repo" class="btn btn-success">GitHub Repo</a>
                     </div>
                 </div>
             </div>
         </div>
+
 
     </main>
 
